fix spacing

--- a/themes/Newspaper/includes/less_files/custom_style_cna.less
+++ b/themes/Newspaper/includes/less_files/custom_style_cna.less
@@ -3362,8 +3362,8 @@ div[class*="post-template-cna"] {
 	/* Block Big Grid  3*/
 	&.td_block_big_grid_3 {
 		.td-big-grid-post{
-			@media (max-width:767px) {
-				margin-bottom: 16px !important;
+			@media screen and (max-width:767px) {
+				margin-bottom: @space_2 !important;
 			}
 			&:hover {
 				.td-post-category {
@@ -4962,7 +4962,7 @@ div.cb-657545417432 {
 .section-socials-xs {
 	margin-left: 10px;
 	margin-right: 10px;
-	margin-bottom: @space_1;
+	margin-bottom: @space_2;
 	.td_block_wrap {
 		&:nth-child(1) {
 			.block-title {
